# sosa-2-0-velky-boj

./: CMakeLists.txt  attr_parser.cpp  bot_clean.cpp  castle_on_grid.cpp  components.cpp  hackerland.cpp  max_element.cpp  max_index_prod.cpp  maze_escape.cpp  text_editor.cpp  var_sized_array.cpp
